Grid Class Key dev
=================================================
- [#2][#5][#6][#7][#8] apply settings on saving
- [#1][#2][#5][#8] add settings for the grid

Grid Class Key 1.0.0-beta-1 (November 22, 2013)
=================================================
- initial release