@@ -38,7 +38,7 @@ $_lang['gridclasskey.filter_add'] = 'Add Filter';
 $_lang['gridclasskey.filters_clear'] = 'Clear Filters';
 $_lang['gridclasskey.empty'] = 'Empty';
 $_lang['gridclasskey.settings'] = 'Settings';
-$_lang['gridclasskey.settings_grid'] = 'Grid\'s Settings';
+$_lang['gridclasskey.settings_container'] = 'Container\'s Settings';
 $_lang['gridclasskey.settings_children'] = 'Children\'s Settings';
 $_lang['gridclasskey.field'] = 'Field';
 $_lang['gridclasskey.alias'] = 'Alias';
@@ -52,7 +52,14 @@ $_lang['gridclasskey.fields_desc'] = 'This setting is to set how the Grid will b
 $_lang['gridclasskey.back_to_default'] = 'Back to default';
 $_lang['gridclasskey.default_template'] = 'Default template';
 $_lang['gridclasskey.child_default_template_desc'] = 'Default template to be applied when creating new document under this container is initiated.';
-$_lang['gridclasskey.mgr_css'] = 'Additional CSS file for this container';
-$_lang['gridclasskey.mgr_css_desc'] = '<strong>Relative URL</strong>.</br>This CSS will only override (not replace) the default:<br>assets/components/gridclasskey/css/mgr.css';
+$_lang['gridclasskey.mgr_css'] = 'Additional CSS file on manager loading';
+$_lang['gridclasskey.mgr_css_desc'] = 'This CSS file will only override (not replace) the default:<br>assets/components/gridclasskey/css/mgr.css';
+$_lang['gridclasskey.mgr_top_js'] = 'Additional top JS file on manager loading';
+$_lang['gridclasskey.mgr_top_js_desc'] = 'This JS file will be loaded before other JS files when opening this container';
+$_lang['gridclasskey.mgr_bottom_js'] = 'Additional bottom JS file on manager loading';
+$_lang['gridclasskey.mgr_bottom_js_desc'] = 'This JS file will be loaded after other JS files when opening this container';
 $_lang['gridclasskey.editor_type'] = 'Editor Type';
-$_lang['gridclasskey.editor_type_placeholder'] = 'text';
+$_lang['gridclasskey.addnewdocbtn_text'] = 'Text for "Add New Document" button';
+$_lang['gridclasskey.addnewdocbtn_text_desc'] = 'Replace the text for "Add New Document" button for this container only. Leave it empty for the default.';
+$_lang['gridclasskey.output_filter'] = 'Output Filter';
+$_lang['gridclasskey.output_filter_desc'] = 'Read the MODX\'s doc about Output Filter. This only applies to the field\'s value' ;
